--- a/eduVPN.Views/Pages/SettingsPage.xaml
+++ b/eduVPN.Views/Pages/SettingsPage.xaml
@@ -35,6 +35,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Grid
@@ -87,6 +88,55 @@
 
         <Grid
             Grid.Row="1"
+            Margin="5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Grid
+                Margin="-5,-2,-5,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <Label
+                    Name="OpenVPNAllowLocalLabel"
+                    Margin="0,-3,-3,-3"
+                    Target="{Binding ElementName=OpenVPNAllowLocal}"
+                    Style="{StaticResource SectionLabelStyle}"
+                    Content="{x:Static res:Strings.SettingsPageAllowLocalLabel}"/>
+
+                <CheckBox
+                    x:Name="OpenVPNAllowLocal"
+                    Grid.Column="1"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Margin="2,2,5,2"
+                    Style="{StaticResource CheckBoxStyle}"
+                    IsChecked="{Binding Source={x:Static prop:Settings.Default}, Path=OpenVPNAllowLocal}"
+                    AutomationProperties.LabeledBy="{Binding ElementName=OpenVPNAllowLocalLabel}"/>
+
+                <Rectangle
+                    Grid.Row="1"
+                    Grid.ColumnSpan="2"
+                    Margin="5,2"
+                    Style="{StaticResource VisualSeparatorStyle}"/>
+            </Grid>
+
+            <TextBlock
+                Grid.Row="1"
+                Margin="0,2,0,0"
+                Text="{x:Static res:Strings.SettingsPageAllowLocalDescription}"/>
+        </Grid>
+
+        <Grid
+            Grid.Row="2"
             Margin="5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
